--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
