--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.3",
     "passport": "^0.7.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
