--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node scripts/seedContent.js",
-    "start": "node app.js",
+    "start": "PORT=9090 node app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
